[project]
name = "dice"
version = "0.5.0-dev"
description = "The dice library is a robust dice rolling library."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sean Quinn", email = "noreply@alkaemic.com" },
]
maintainers = [
    { name = "Alkaemic, LLC", email = "opensource@alkaemic.com" },
    { name = "Zack Root" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Text Processing",
]
dependencies = [
    "pyparsing>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/alkaemic/dice-python"
Repository = "https://github.com/alkaemic/dice-python"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "black>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
